--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Verificador de Idade</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./app/style.css">
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
     <footer>
         <p>&copy; Mussi</p>
     </footer>
-    <script src="main.js"></script>
+    <script src="./app/main.js"></script>
     
 </body>
 </html>
